--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,8 @@
 # prevent it from being included in the site.
 
 main:
-#  - title: "Publications"
-#    url: /publications/
+- title: "Publications"
+  url: /publications/
 
 #  - title: "Talks"
 #    url: /talks/    
@@ -20,8 +20,8 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
-#  - title: "CV"
-#    url: /cv/
+- title: "CV"
+  url: /files/Lorenzo_Noci_CV.pdf
     
-#  - title: "Guide"
-#    url: /markdown/
+- title: "Research Statement"
+  url: /files/research_statement.pdf
